--- a/app/src/main/res/layout/view_tab_switcher_button.xml
+++ b/app/src/main/res/layout/view_tab_switcher_button.xml
@@ -14,11 +14,10 @@
   ~ limitations under the License.
   -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="48dp"
-    android:layout_height="48dp">
+    tools:parentTag="android.widget.RelativeLayout">
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/anim"
@@ -31,7 +30,7 @@
 
     <TextView
         android:id="@+id/tabCount"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:textAlignment="center"
@@ -51,4 +50,4 @@
         android:longClickable="true"
         android:focusable="true" />
 
-</RelativeLayout>
+</merge>
