--- a/app/src/main/res/layout/fragment_browser_tab.xml
+++ b/app/src/main/res/layout/fragment_browser_tab.xml
@@ -81,8 +81,7 @@
         android:layout_height="match_parent"
         android:animateLayoutChanges="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="com.duckduckgo.app.browser.BrowserActivity"
-        tools:menu="@menu/menu_browser_activity">
+        tools:context="com.duckduckgo.app.browser.BrowserActivity">
 
         <FrameLayout
             android:id="@+id/webViewContainer"
