removing all scrolling layout flags from the xml, we use the OmnibarScrolling for that

--- a/app/src/main/res/layout/fragment_browser_tab.xml
+++ b/app/src/main/res/layout/fragment_browser_tab.xml
@@ -19,8 +19,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_scrollFlags="scroll|enterAlways">
+    android:layout_height="match_parent">
 
     <include layout="@layout/include_omnibar_toolbar" />
 
