--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -56,5 +56,7 @@
     <attr name="brokenSitesButtonDisabledBackgroundColor" format="color" />
     <attr name="brokenSitesButtonDisabledTextColor" format="color" />
     <attr name="brokenSitesButtonRippleColor" format="color" />
+    <attr name="topCallToActionDescriptionColor" format="color" />
+    <attr name="topCallToActionBackgroundColor" format="color" />
 
 </resources>
