--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -70,6 +70,8 @@
         <item name="brokenSitesButtonDisabledBackgroundColor">@color/greyishBrownTwo</item>
         <item name="brokenSitesButtonDisabledTextColor">@color/warGreyTwo</item>
         <item name="brokenSitesButtonRippleColor">@color/white</item>
+        <item name="topCallToActionDescriptionColor">@color/grayish</item>
+        <item name="topCallToActionBackgroundColor">@color/greyishBrownTwo</item>
 
         <item name="feedbackAnonymousFeedbackLabelColor">@color/grayish</item>
         <item name="feedbackListItemBackgroundColor">@color/almostBlack</item>
@@ -135,6 +137,8 @@
         <item name="brokenSitesButtonDisabledBackgroundColor">@color/subtleGrayTwo</item>
         <item name="brokenSitesButtonDisabledTextColor">@color/white</item>
         <item name="brokenSitesButtonRippleColor">@color/subtleGrayTwo</item>
+        <item name="topCallToActionDescriptionColor">@color/almostBlack</item>
+        <item name="topCallToActionBackgroundColor">@color/white</item>
 
         <item name="feedbackAnonymousFeedbackLabelColor">@color/warmerGray</item>
         <item name="feedbackListItemBackgroundColor">@color/whiteFive</item>
