--- a/app/src/main/res/values/string-untranslated.xml
+++ b/app/src/main/res/values/string-untranslated.xml
@@ -57,6 +57,7 @@
     <string name="stickySearchPromptRemove">Remove</string>
     <string name="notificationChannelSearch">Search</string>
 
+    <!-- Covid Cta-->
     <string name="covidCtaText">Get official COVID-19 info and tips.</string>
 
 </resources>
