--- a/app/src/main/res/layout/fragment_browser_tab.xml
+++ b/app/src/main/res/layout/fragment_browser_tab.xml
@@ -19,8 +19,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_scrollFlags="scroll|enterAlways">
+    android:layout_height="match_parent">
 
     <include layout="@layout/include_omnibar_toolbar" />
 
@@ -70,19 +69,29 @@
         android:layout_height="match_parent"
         android:animateLayoutChanges="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="com.duckduckgo.app.browser.BrowserActivity"
-        tools:menu="@menu/menu_browser_activity">
+        tools:context="com.duckduckgo.app.browser.BrowserActivity">
 
-        <FrameLayout
-            android:id="@+id/webViewContainer"
+        <com.duckduckgo.app.browser.ui.ScrollAwareSwipeRefreshLayout
+            android:id="@+id/swipeContainer"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:background="#4F00" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <FrameLayout
+                android:id="@+id/webViewContainer"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:background="#4F00" />
+
+        </com.duckduckgo.app.browser.ui.ScrollAwareSwipeRefreshLayout>
 
         <View
             android:id="@+id/focusDummy"
