binding all buttons in bottom bar

--- a/app/src/main/res/layout/layout_bottom_navigation_bar.xml
+++ b/app/src/main/res/layout/layout_bottom_navigation_bar.xml
@@ -19,7 +19,17 @@
     tools:parentTag="android.widget.LinearLayout">
 
     <ImageButton
-        android:id="@+id/bottomBarSearchItem"
+        android:id="@+id/bottomBarBackItem"
+        style="@style/BrowserIconMenuItem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="?selectableItemBackgroundBorderless"
+        android:contentDescription="@string/back"
+        android:src="@drawable/ic_arrow_back_24dp" />
+
+    <ImageButton
+        android:id="@+id/bottomBarSearchkItem"
         style="@style/BrowserIconMenuItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -29,7 +39,17 @@
         android:src="@drawable/ic_search_black_24dp" />
 
     <ImageButton
-        android:id="@+id/bottomBarBookmarksItem"
+        android:id="@+id/bottomBarForwardItem"
+        style="@style/BrowserIconMenuItem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="?selectableItemBackgroundBorderless"
+        android:contentDescription="@string/back"
+        android:src="@drawable/ic_arrow_forward_24dp" />
+
+    <ImageButton
+        android:id="@+id/bottomBarBookmarksItemOne"
         style="@style/BrowserIconMenuItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -47,6 +67,16 @@
         android:background="?selectableItemBackgroundBorderless"
         android:contentDescription="@string/back"
         android:src="@drawable/ic_fire_black_24dp" />
+
+    <ImageButton
+        android:id="@+id/bottomBarBookmarksItemTwo"
+        style="@style/BrowserIconMenuItem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="?selectableItemBackgroundBorderless"
+        android:contentDescription="@string/back"
+        android:src="@drawable/ic_bookmarks_black_24dp" />
 
     <com.duckduckgo.app.browser.TabSwitcherButton
         android:id="@+id/bottomBarTabsItem"
