UI fixes for tablets.
- changing alignment and max-width for dax dialogs

--- a/app/src/main/res/layout/content_dax_dialog.xml
+++ b/app/src/main/res/layout/content_dax_dialog.xml
@@ -60,7 +60,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toTopOf="@id/cardView"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@id/cardView"
             app:srcCompat="@drawable/ic_dax_icon" />
 
         <androidx.appcompat.widget.AppCompatImageView
@@ -74,7 +74,7 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
@@ -83,7 +83,8 @@
             app:cardCornerRadius="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintWidth_max="600dp">
 
             <LinearLayout
                 android:id="@+id/cardContainer"
