--- a/app/src/main/res/layout/include_duckduckgo_browser_webview.xml
+++ b/app/src/main/res/layout/include_duckduckgo_browser_webview.xml
@@ -14,7 +14,7 @@
   ~ limitations under the License.
   -->
 
-<WebView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.duckduckgo.app.browser.DuckDuckGoWebView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/browserWebView"
@@ -33,4 +33,4 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:visibility="visible">
 
-</WebView>
+</com.duckduckgo.app.browser.DuckDuckGoWebView>
