--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -149,7 +149,7 @@
     <style name="BrowserIconMenuItem">
         <item name="android:paddingTop">6dp</item>
         <item name="android:paddingBottom">6dp</item>
-        <item name="android:background">@android:color/transparent</item>
+        <item name="android:background">?selectableItemBackground</item>
         <item name="android:tint">@color/browser_menu_icon</item>
     </style>
 
