added new icons for bottom bar and popup menu

--- a/app/src/main/res/layout/include_omnibar_toolbar.xml
+++ b/app/src/main/res/layout/include_omnibar_toolbar.xml
@@ -98,7 +98,7 @@
                         android:paddingStart="8dp"
                         android:paddingEnd="8dp"
                         android:background="@drawable/omnibar_field_background"
-                        android:fontFamily="sans-serif-medium"
+                        android:fontFamily="sans-serif"
                         android:hint="@string/omnibarInputHint"
                         android:imeOptions="flagNoExtractUi|actionGo|flagNoPersonalizedLearning"
                         android:inputType="textUri|textNoSuggestions"
@@ -107,7 +107,7 @@
                         android:textColor="?attr/omnibarTextColor"
                         android:textColorHint="?attr/omnibarHintColor"
                         android:textCursorDrawable="@drawable/text_cursor"
-                        android:textSize="13sp"
+                        android:textSize="16sp"
                         android:textStyle="normal"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@id/clearTextButton"
