--- a/app/src/main/res/layout/popup_window_browser_menu.xml
+++ b/app/src/main/res/layout/popup_window_browser_menu.xml
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:contentDescription="@string/back"
-            android:src="@drawable/ic_arrow_back_24dp" />
+            android:src="@drawable/ic_back" />
 
         <ImageButton
             android:id="@+id/forwardPopupMenuItem"
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:contentDescription="@string/forward"
-            android:src="@drawable/ic_arrow_forward_24dp" />
+            android:src="@drawable/ic_forward" />
 
         <ImageButton
             android:id="@+id/refreshPopupMenuItem"
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:contentDescription="@string/refresh"
-            android:src="@drawable/ic_refresh_24dp" />
+            android:src="@drawable/ic_bottom_bar_refresh" />
 
     </LinearLayout>
 
