popup menu now also respect light / dark theme

--- a/app/src/main/res/layout/fragment_browser_tab.xml
+++ b/app/src/main/res/layout/fragment_browser_tab.xml
@@ -28,7 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_gravity="bottom"
-        android:background="@color/white"
+        android:background="?attr/colorPrimary"
         android:elevation="8dp"
         android:gravity="center"
         android:orientation="horizontal"
