--- a/app/src/main/res/layout/popup_window_browser_bottom_tab_menu.xml
+++ b/app/src/main/res/layout/popup_window_browser_bottom_tab_menu.xml
@@ -18,7 +18,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white">
+    android:background="?attr/colorPrimary">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -93,7 +93,6 @@
         android:id="@+id/browserMenuHeader"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:background="@color/white"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
