the search icon is shown only when the serp has focus, and the privacy grade works the opposite way

--- a/app/src/main/res/layout/include_omnibar_toolbar.xml
+++ b/app/src/main/res/layout/include_omnibar_toolbar.xml
@@ -95,9 +95,9 @@
                         style="@style/Base.V7.Widget.AppCompat.EditText"
                         android:layout_width="0dp"
                         android:layout_height="0dp"
-                        android:paddingStart="8dp"
+                        android:paddingStart="5dp"
                         android:paddingEnd="8dp"
-                        android:background="@drawable/omnibar_field_background"
+                        android:background="@null"
                         android:fontFamily="sans-serif"
                         android:hint="@string/omnibarInputHint"
                         android:imeOptions="flagNoExtractUi|actionGo|flagNoPersonalizedLearning"
