cleaning up the tabs switcher and removing its animation

--- a/app/src/main/res/layout/layout_bottom_navigation_bar.xml
+++ b/app/src/main/res/layout/layout_bottom_navigation_bar.xml
@@ -52,6 +52,7 @@
         android:id="@+id/bottomBarTabsItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="?selectableItemBackgroundBorderless"
         android:layout_weight="1"/>
 
     <ImageButton
