--- a/app/src/main/res/layout/view_tab_switcher_button.xml
+++ b/app/src/main/res/layout/view_tab_switcher_button.xml
@@ -19,14 +19,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:parentTag="android.widget.RelativeLayout">
 
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/anim"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_centerInParent="true"
-        android:clickable="false"
-        app:lottie_colorFilter="?attr/toolbarIconColor"
-        app:lottie_rawRes="@raw/new_tab" />
+<!--    <com.airbnb.lottie.LottieAnimationView-->
+<!--        android:id="@+id/anim"-->
+<!--        android:layout_width="24dp"-->
+<!--        android:layout_height="24dp"-->
+<!--        android:layout_centerInParent="true"-->
+<!--        android:clickable="false"-->
+<!--        app:lottie_colorFilter="?attr/toolbarIconColor"-->
+<!--        app:lottie_rawRes="@raw/new_tab" />-->
 
     <TextView
         android:id="@+id/tabCount"
@@ -38,16 +38,8 @@
         android:textSize="12sp"
         android:textStyle="bold"
         android:typeface="normal"
+        android:gravity="center"
+        android:background="@drawable/ic_tabs"
         tools:text="66" />
-
-    <FrameLayout
-        android:id="@+id/clickZone"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_centerInParent="true"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:clickable="true"
-        android:longClickable="true"
-        android:focusable="true" />
 
 </merge>
