--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -36,4 +36,6 @@
     <dimen name="changeAppIconListPadding">4dp</dimen>
     <dimen name="changeAppIconSize">75dp</dimen>
 
+    <dimen name="bottomBarHeight">48dp</dimen>
+
 </resources>
