--- a/app/src/main/res/layout/include_omnibar_toolbar.xml
+++ b/app/src/main/res/layout/include_omnibar_toolbar.xml
@@ -52,9 +52,9 @@
                     android:id="@+id/omniBarContainer"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginStart="13dp"
+                    android:layout_marginStart="5dp"
                     android:layout_marginTop="8dp"
-                    android:layout_marginEnd="13dp"
+                    android:layout_marginEnd="5dp"
                     android:layout_marginBottom="8dp"
                     android:background="@drawable/omnibar_field_background"
                     android:paddingStart="6dp"
@@ -85,7 +85,7 @@
                         android:layout_height="wrap_content"
                         android:contentDescription="@string/privacyGradeContentDescription"
                         android:padding="4dp"
-                        android:src="@drawable/ic_search_black_24dp"
+                        android:src="@drawable/ic_loupe_24dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
