--- a/app/src/main/res/color/bottom_bar_icon_color_selector.xml
+++ b/app/src/main/res/color/bottom_bar_icon_color_selector.xml
@@ -17,5 +17,5 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="false" android:color="?attr/bottomBarIconColorDisabled" />
-    <item android:state_enabled="true" android:color="?attr/bottomBarIconColor"/>
+    <item android:state_enabled="true" android:color="?toolbarIconColor"/>
 </selector>
