--- a/app/src/main/res/layout/popup_window_browser_bottom_tab_menu.xml
+++ b/app/src/main/res/layout/popup_window_browser_bottom_tab_menu.xml
@@ -16,7 +16,7 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="240dp"
     android:layout_height="wrap_content"
     android:background="?attr/colorPrimary">
 
@@ -95,6 +95,8 @@
         android:layout_height="50dp"
         android:gravity="center"
         android:orientation="horizontal"
+        android:paddingStart="18dp"
+        android:paddingEnd="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
