--- a/app/src/main/res/layout/view_tab_switcher_button.xml
+++ b/app/src/main/res/layout/view_tab_switcher_button.xml
@@ -19,22 +19,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:parentTag="android.widget.RelativeLayout">
 
-<!--    <com.airbnb.lottie.LottieAnimationView-->
-<!--        android:id="@+id/anim"-->
-<!--        android:layout_width="24dp"-->
-<!--        android:layout_height="24dp"-->
-<!--        android:layout_centerInParent="true"-->
-<!--        android:clickable="false"-->
-<!--        app:lottie_colorFilter="?attr/toolbarIconColor"-->
-<!--        app:lottie_rawRes="@raw/new_tab" />-->
-
     <TextView
         android:id="@+id/tabCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:textAlignment="center"
-        android:textColor="@color/brownishGray"
+        android:textColor="?toolbarIconColor"
         android:textSize="12sp"
         android:textStyle="bold"
         android:typeface="normal"
