--- a/app/src/main/res/drawable/onboarding_primary_cta_button_rounded_bg.xml
+++ b/app/src/main/res/drawable/onboarding_primary_cta_button_rounded_bg.xml
@@ -13,11 +13,12 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/button_contained_background" />
-    <stroke
-        android:width="1dp"
-        android:color="@color/button_contained_background" />
-    <corners android:radius="22dp" />
-</shape>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/white">
+    <item>
+        <shape>
+            <solid android:color="@color/button_contained_background" />
+            <corners android:radius="22dp" />
+        </shape>
+    </item>
+</ripple>
