--- a/app/src/main/res/layout/popup_window_browser_bottom_tab_menu.xml
+++ b/app/src/main/res/layout/popup_window_browser_bottom_tab_menu.xml
@@ -73,6 +73,7 @@
                 android:drawablePadding="30dp"
                 android:paddingStart="30dp"
                 android:paddingEnd="0dp"
+                android:drawableTint="@color/browser_menu_icon"
                 android:text="@string/requestDesktopSiteMenuTitle" />
 
             <TextView
