--- a/app/src/main/res/layout/layout_tabs_bottom_navigation_bar.xml
+++ b/app/src/main/res/layout/layout_tabs_bottom_navigation_bar.xml
@@ -28,6 +28,18 @@
         android:contentDescription="@string/back"
         android:src="@drawable/ic_newtab" />
 
+
+    <ImageButton
+        android:id="@+id/bottomBarFakeItemOne"
+        style="@style/BrowserIconMenuItem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="?selectableItemBackgroundBorderless"
+        android:contentDescription="@string/back"
+        android:visibility="invisible"
+        android:src="@drawable/ic_newtab" />
+
     <ImageButton
         android:id="@+id/bottomBarFireItem"
         style="@style/BrowserIconMenuItem"
@@ -37,6 +49,17 @@
         android:background="?selectableItemBackgroundBorderless"
         android:contentDescription="@string/back"
         android:src="@drawable/ic_fire_black_24dp" />
+
+    <ImageButton
+        android:id="@+id/bottomBarFakeItemTwo"
+        style="@style/BrowserIconMenuItem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="?selectableItemBackgroundBorderless"
+        android:contentDescription="@string/back"
+        android:visibility="invisible"
+        android:src="@drawable/ic_newtab" />
 
     <ImageButton
         android:id="@+id/bottomBarOverflowItem"
