--- a/app/src/main/res/layout/popup_window_browser_bottom_tab_menu.xml
+++ b/app/src/main/res/layout/popup_window_browser_bottom_tab_menu.xml
@@ -16,9 +16,9 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="240dp"
+    android:layout_width="320dp"
     android:layout_height="wrap_content"
-    android:background="?attr/colorPrimary">
+    android:background="@drawable/popup_menu_bg">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -36,11 +36,11 @@
         app:layout_constrainedHeight="true">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingTop="13dp"
-            android:paddingBottom="20dp">
+            android:paddingBottom="16dp">
 
             <TextView
                 android:id="@+id/newTabPopupMenuItem"
@@ -70,8 +70,8 @@
                 android:layout_marginEnd="20dp"
                 android:button="@null"
                 android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
-                android:drawablePadding="30dp"
-                android:paddingStart="30dp"
+                android:drawablePadding="24dp"
+                android:paddingStart="24dp"
                 android:paddingEnd="0dp"
                 android:drawableTint="@color/browser_menu_icon"
                 android:text="@string/requestDesktopSiteMenuTitle" />
@@ -96,8 +96,9 @@
         android:layout_height="50dp"
         android:gravity="center"
         android:orientation="horizontal"
-        android:paddingStart="18dp"
-        android:paddingEnd="18dp"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
+        android:paddingBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
