ensure keyboard is not shown if the omnibar does not have focus

--- a/app/src/main/res/layout/popup_window_tabs_menu.xml
+++ b/app/src/main/res/layout/popup_window_tabs_menu.xml
@@ -17,10 +17,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/colorPrimary"
     android:orientation="vertical"
     android:paddingTop="13dp"
-    android:paddingBottom="20dp">
+    android:paddingBottom="20dp"
+    android:background="@drawable/popup_menu_bg">
 
     <TextView
         android:id="@+id/closeAllTabs"
