--- a/app/src/main/res/color/browser_menu_text.xml
+++ b/app/src/main/res/color/browser_menu_text.xml
@@ -18,5 +18,5 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="?attr/bottomBarIconColorDisabled" android:state_enabled="false" />
-    <item android:color="@color/brownishGray" />
+    <item android:color="?attr/omnibarTextColor" />
 </selector>
